abhyram-backend/force-app/main/default/objects/Timesheet_Entry__c/Timesheet_Entry__c.object-meta.xml
<CustomObject>
    <label>Timesheet Entry</label>
    <pluralLabel>Timesheet Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>Entry #</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>