abhyram-backend/force-app/main/default/objects/Timesheet_Entry__c/fields/Created_From_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Suggestion__c</fullName>
    <label>Created From Suggestion</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>