abhyram-backend/force-app/main/default/objects/Timesheet_Entry__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>