abhyram-backend/force-app/main/default/objects/Timesheet_Entry__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>Lookup</type>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Timesheet_Entries</relationshipName>
</CustomField>