abhyram-backend/force-app/main/default/objects/Timesheet_Entry__c/fields/Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Timesheet__c</fullName>
    <label>Timesheet</label>
    <type>MasterDetail</type>
    <referenceTo>Timesheet__c</referenceTo>
    <relationshipName>Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>