abhyram-backend/force-app/main/default/objects/Timesheet_Entry__c/validationRules/Hours_Must_Be_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Hours_Must_Be_Valid</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Hours__c &lt; 0.25, Hours__c &gt; 24)</errorConditionFormula>
    <errorMessage>Hours must be between 0.25 and 24</errorMessage>
</ValidationRule>